--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -333,13 +333,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9aOY0psw6Emr",
-        "outputId": "c496b6df-fdab-4e33-f4fc-4282806bc2ea"
+        "outputId": "3d0c4c8d-9f11-4883-d6e2-1c1ecc1e7180"
       },
       "outputs": [
         {
@@ -347,10 +347,10 @@
           "output_type": "stream",
           "text": [
             "Total Number of Reviews: 25557\n",
-            "Number of 5-star reviews: 12033\n",
-            "Number of 5-star vine paid reviews: 0\n",
+            "Number of 5-star reviews: 12235\n",
+            "Number of 5-star vine paid reviews: 202\n",
             "Number of 5-star vine unpaid reviews: 12033\n",
-            "Percentage paid Reviews: 0.0\n",
+            "Percentage paid Reviews: 0.007903901083851783\n",
             "Percentage unpaid Reviews: 0.47082990961380444\n"
           ]
         }
@@ -360,9 +360,9 @@
         "# of review (paid vs unpaid).\n",
         "total_number_of_reviews = filtered_new_df.count()\n",
         "print(\"Total Number of Reviews:\", total_number_of_reviews)\n",
-        "number_of_5_star_reviews = filtered_new_yes_df.filter(\"star_rating = 5\").count()\n",
+        "number_of_5_star_reviews = filtered_new_df.filter(\"star_rating = 5\").count()\n",
         "print(\"Number of 5-star reviews:\", number_of_5_star_reviews)\n",
-        "paid_reviews = filtered_new_yes_df.filter(\"vine == 'Y' AND star_rating = 5\").count()\n",
+        "paid_reviews = filtered_new_df.filter(\"vine == 'Y' AND star_rating = 5\").count()\n",
         "print(\"Number of 5-star vine paid reviews:\", paid_reviews)\n",
         "unpaid_reviews = filtered_new_yes_df.filter(\"vine == 'N' AND star_rating = 5\").count()\n",
         "print(\"Number of 5-star vine unpaid reviews:\", unpaid_reviews)\n",
